--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-syntax-highlighter": "^15.5.0"
+  },
+  "devDependencies": {
+    "@types/node": "20.11.20",
+    "@types/react": "18.2.58",
+    "typescript": "5.3.3"
   }
 }
