will add carousel component

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@gsap/react": "^2.1.2",
+    "@mdxeditor/editor": "^3.36.0",
     "geist": "^1.4.2",
     "gray-matter": "^4.0.3",
     "gsap": "^3.13.0",
