--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.7.2",
-    "@fortawesome/free-brands-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
     "@gsap/react": "^2.1.2",
     "@mdxeditor/editor": "^3.36.0",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "geist": "^1.4.2",
     "gray-matter": "^4.0.3",
     "gsap": "^3.13.0",
@@ -21,6 +20,7 @@
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-syntax-highlighter": "^15.6.1",
     "zustand": "^5.0.5"
   },
