--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@mdxeditor/editor": "^3.36.0",
+    "@wooorm/starry-night": "^3.8.0",
     "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "geist": "^1.4.2",
