--- a/package.json
+++ b/package.json
@@ -11,6 +11,15 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@mdxeditor/editor": "^3.36.0",
+    "@supabase/supabase-js": "^2.50.0",
+    "@tiptap/extension-heading": "^2.14.0",
+    "@tiptap/extension-image": "^2.14.0",
+    "@tiptap/extension-link": "^2.14.0",
+    "@tiptap/extension-placeholder": "^2.14.0",
+    "@tiptap/extension-underline": "^2.14.0",
+    "@tiptap/react": "^2.14.0",
+    "@tiptap/starter-kit": "^2.14.0",
+    "@types/turndown": "^5.0.5",
     "@wooorm/starry-night": "^3.8.0",
     "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
@@ -23,6 +32,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "turndown": "^7.2.0",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
