--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
-    "@mdxeditor/editor": "^3.36.0",
     "@supabase/supabase-js": "^2.50.0",
     "@tiptap/extension-heading": "^2.14.0",
     "@tiptap/extension-image": "^2.14.0",
@@ -31,6 +30,7 @@
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "turndown": "^7.2.0",
     "zustand": "^5.0.5"
