--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@supabase/supabase-js": "^2.50.0",
+    "@tiptap/extension-code-block-lowlight": "^2.14.0",
     "@tiptap/extension-heading": "^2.14.0",
     "@tiptap/extension-image": "^2.14.0",
     "@tiptap/extension-link": "^2.14.0",
     "@tiptap/extension-placeholder": "^2.14.0",
+    "@tiptap/extension-subscript": "^2.14.0",
+    "@tiptap/extension-superscript": "^2.14.0",
+    "@tiptap/extension-typography": "^2.14.0",
     "@tiptap/extension-underline": "^2.14.0",
     "@tiptap/react": "^2.14.0",
     "@tiptap/starter-kit": "^2.14.0",
+    "@types/highlight.js": "^9.12.4",
     "@types/turndown": "^5.0.5",
     "@wooorm/starry-night": "^3.8.0",
     "embla-carousel": "^8.6.0",
@@ -26,8 +31,10 @@
     "gray-matter": "^4.0.3",
     "gsap": "^3.13.0",
     "hast-util-to-jsx-runtime": "^2.3.6",
+    "lowlight": "^3.3.0",
     "markdown-to-jsx": "^7.7.6",
     "next": "15.3.3",
+    "prosemirror-view": "^1.40.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
