--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.0",
     "@tiptap/extension-code-block-lowlight": "^2.14.0",
     "@tiptap/extension-heading": "^2.14.0",
