--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@supabase/ssr": "^0.6.1",
-    "@supabase/supabase-js": "^2.50.0",
-    "@tiptap/extension-code-block-lowlight": "^2.14.0",
     "@tiptap/extension-heading": "^2.14.0",
     "@tiptap/extension-image": "^2.14.0",
     "@tiptap/extension-link": "^2.14.0",
@@ -25,6 +23,7 @@
     "@tiptap/starter-kit": "^2.14.0",
     "@types/highlight.js": "^9.12.4",
     "@types/turndown": "^5.0.5",
+    "@vercel/analytics": "^1.5.0",
     "@wooorm/starry-night": "^3.8.0",
     "embla-carousel": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
@@ -32,7 +31,6 @@
     "gray-matter": "^4.0.3",
     "gsap": "^3.13.0",
     "hast-util-to-jsx-runtime": "^2.3.6",
-    "lowlight": "^3.3.0",
     "markdown-to-jsx": "^7.7.6",
     "next": "15.3.3",
     "prosemirror-view": "^1.40.0",
